--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=springboot-security
 spring.security.user.name=aswin
 spring.security.user.password=2465
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
